k8s/templates/mariadb/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: mariadb
