k8s/templates/mariadb/mysql-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
spec:
  podSelector:
    matchLabels:
      io.kompose.network/mysql: "true"
  policyTypes:
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mysql: "true"
  egress: []
